--- a/templates/contratos.html
+++ b/templates/contratos.html
@@ -8,6 +8,29 @@
   <link rel="stylesheet" href="../static/estilo_base.css">
 </head>
 <body>
+    <!-- Barra de Navegación -->
+    <nav class="navbar navbar-expand-lg" style="background-color: var(--color-primario);">
+      <div class="container">
+        <a class="navbar-brand text-white" href="#">Mi Empresa</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Página Principal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Gestión de Contratos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="#">Cerrar Sesión</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
   <div class="container my-5">
     <h1 class="mb-4" style="color: var(--color-primario);">Gestión de Contratos</h1>
 
