--- a/templates/publicar_ofertas_de_empleo.html
+++ b/templates/publicar_ofertas_de_empleo.html
@@ -11,20 +11,20 @@
   <!-- Barra de Navegación -->
   <nav class="navbar navbar-expand-lg" style="background-color: var(--color-primario);">
     <div class="container">
-      <a class="navbar-brand text-white" href="#">Mi Empresa</a>
+      <a class="navbar-brand text-white" href="../index.html">Mi Empresa</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Inicio</a>
+            <a class="nav-link text-white" href="../index.html">Página Principal</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="#">Ofertas de Empleo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Cerrar Sesión</a>
+            <a class="nav-link text-white" href="iniciar_sesion.html">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
