--- a/templates/reporte_evaluacion_desempeno.html
+++ b/templates/reporte_evaluacion_desempeno.html
@@ -13,15 +13,15 @@
     <!-- Barra de Navegación -->
     <nav class="navbar navbar-expand-lg" style="background-color: var(--color-primario);">
       <div class="container">
-        <a class="navbar-brand text-white" href="#">Mi Empresa</a>
+        <a class="navbar-brand text-white" href="../index.html">Mi Empresa</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link text-white" href="#">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="../index.html">Página Principal</a></li>
             <li class="nav-item"><a class="nav-link text-white" href="#">Reportes</a></li>
-            <li class="nav-item"><a class="nav-link text-white" href="#">Cerrar Sesión</a></li>
+            <li class="nav-item"><a class="nav-link text-white" href="iniciar_sesion.html">Cerrar Sesión</a></li>
           </ul>
         </div>
       </div>
