Agregado links a la barra de navegacion

--- a/templates/costos_de_contratacion.html
+++ b/templates/costos_de_contratacion.html
@@ -16,18 +16,10 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link text-white" href="../index.html">Página Principal</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="#">Informes de Costos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-white" href="iniciar_sesion.html">Cerrar Sesión</a>
-            </li>
-          </ul>
+        <div class="nav-links">
+            <a href="index.html">🏠 Inicio</a>
+            <a href="#">⚙️ Configuración</a>
+            <a href="iniciar_sesion.html">🚪 Cerrar Sesión</a>
         </div>
       </div>
     </nav>
